# libs3util

./: CMakeLists.txt  LICENSE  Makefile  config.h.in  libs3util.pc.in  s3utilConfig.cmake.in
src/: exception.c  ioset.c  s3util.h  text.c  tools.c
